--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,35 @@ a {
   text-decoration: none;
 }
 
+a:hover {
+  text-decoration: underline;
+}
+
+
 * {
   box-sizing: border-box;
+}
+
+/*--*-*---*/
+svg{ /*base*/
+  width: 1.15em;
+  height: 1.15em;
+}
+svg.sm{
+  width: 1.25em;
+  height: 1.25em;
+}
+svg.md{
+  width: 1.55em;
+  height: 1.55em;
+}
+svg.lg{
+  width: 1.75em;
+  height: 1.75em;
+}
+
+
+.hafill-star {
+  
+  color: yellow;
 }
